[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/nodes/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/BebasNeue-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/OpenSans-Light.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
extra_spacing_top = -10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 18
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 32
extra_spacing_top = -10
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.337255, 0.913725, 0.956863, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100
shadow_color = Color( 0.337255, 0.913725, 0.956863, 0.392157 )
shadow_size = 9

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[node name="HUD" type="MarginContainer"]
margin_right = 720.0
margin_bottom = 420.0
mouse_filter = 2
custom_constants/margin_right = 60
custom_constants/margin_top = 120
custom_constants/margin_left = 60
custom_constants/margin_bottom = 15
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 60.0
margin_top = 120.0
margin_right = 660.0
margin_bottom = 405.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 600.0
margin_bottom = 210.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="ScoreContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_top = 72.0
margin_right = 148.0
margin_bottom = 137.0
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="ScoreLabel" type="Label" parent="VBoxContainer/HBoxContainer/ScoreContainer"]
margin_right = 148.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.501961 )
text = "SCORE"

[node name="Score" type="Label" parent="VBoxContainer/HBoxContainer/ScoreContainer"]
margin_top = 30.0
margin_right = 148.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
text = "000"

[node name="ObjectiveContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 152.0
margin_right = 448.0
margin_bottom = 210.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Objective" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/ObjectiveContainer"]
margin_left = 108.0
margin_top = 44.0
margin_right = 188.0
margin_bottom = 164.0
rect_min_size = Vector2( 80, 120 )
rect_clip_content = false
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
bbcode_text = "00"
text = "00"
scroll_active = false
custom_effects = [ null ]

[node name="BestScoreContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 452.0
margin_top = 72.0
margin_right = 600.0
margin_bottom = 137.0
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="BestScoreLabel" type="Label" parent="VBoxContainer/HBoxContainer/BestScoreContainer"]
margin_right = 148.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 0.501961 )
text = "BEST SCORE"
align = 2

[node name="BestScore" type="Label" parent="VBoxContainer/HBoxContainer/BestScoreContainer"]
margin_top = 30.0
margin_right = 148.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 2

[node name="TimerContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 214.0
margin_right = 600.0
margin_bottom = 285.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TimerProgressBar" type="ProgressBar" parent="VBoxContainer/TimerContainer"]
margin_top = 28.0
margin_right = 600.0
margin_bottom = 43.0
rect_min_size = Vector2( 0, 15 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 6
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
value = 100.0
percent_visible = false
